--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -1,12 +1,11 @@
 .main-view {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  height: 100%;
+  height: 100vh;
 }
   
 .content {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr 5fr;
+  height: 100vh;
 }
