--- a/src/components/Body/bodyContainer.css
+++ b/src/components/Body/bodyContainer.css
@@ -1,3 +1,5 @@
 .body-container {
-    padding: 10px;
+    background-color: #ffffff; /* Color de fondo del componente */
+    border-radius: 15px; /* Esquinas redondeadas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Sombra */
 }
