--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,4 +1,14 @@
+@import '../variables.css';
+
 .header {
-  background-color: #51e8ff;
+  padding-left: 30px;
   width: 100%; /* Asegura que el header ocupe todo el ancho disponible */
+  display: flex;
+  align-items: center;
+}
+
+.title {
+  color: var(--primary-color);
+  font-family: var(--font-primary);
+  font-size: 20px;
 }
