--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -1,5 +1,30 @@
+@import '../variables.css';
+
 .sidebar {
-    background-color: #f8f9fa;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    background-color: var(--primary-color);
     height: 100vh;
-    padding: 10px;
+    padding: 40px 20px 0px 20px;
+    min-width: 240px;
+    font-family: var(--font-primary);
+    align-items: center;
+}
+
+.title-text{
+    color: var(--light-text-color);
+    text-align: center;
+}
+
+.subtitle-text{
+    color: var(--light-text-color);
+    font-size: 16px;
+    text-align: center;
+}
+
+.general-text{
+    color: var(--light-text-color);
+    font-size: 14px;
+    text-align: center;
 }
