--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,7 @@
 html {
   box-sizing: border-box;
-  font-size: 16px;
-  font-family: sans-serif;
 }
 
-*,
-*:after,
-*::before {
-  box-sizing: inherit;
-}
-
-@media screen and (min-width: 1024px) {
-  .grid-1-2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: start;
-    gap: 2rem;
-  }
-
-  .grid-1-3 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: start;
-    gap: 2rem;
-  }
+body{
+  margin: 0px;
 }
