--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -1,6 +1,6 @@
 .main-view {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 4fr;
   height: 100vh;
 }
   
@@ -8,4 +8,5 @@
   display: grid;
   grid-template-rows: 1fr 5fr;
   height: 100vh;
+  padding: 0px 20px 0px 20px;
 }
