--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -10,6 +10,7 @@
     min-width: 240px;
     font-family: var(--font-primary);
     align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Sombra */
 }
 
 .title-text{
