--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -6,6 +6,7 @@
     --text-dark-color: rgb(52, 52, 52);
     --text-color: rgb(124, 124, 124);
     --background-color: rgb(72, 72, 72);
+    --light-lines: rgb(244, 244, 244);
     --light-text-color: #fff;
     --font-primary: 'Quicksand', sans-serif;
     --font-secondary: 'Open Sans', sans-serif;
