--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -14,6 +14,8 @@
     border-bottom: thin solid var(--light-lines);
     border-right: 1px solid var(--light-lines); /* Agrega un borde derecho a las celdas */
     border-left: 1px solid var(--light-lines);  /* Agrega un borde izquierdo a las celdas */
+    color: var(--text-dark-color);
+    font-size: 14px;
 }
 
 .td {
@@ -22,6 +24,8 @@
     border-bottom: thin solid var(--light-lines);
     border-right: 1px solid var(--light-lines); /* Agrega un borde derecho a las celdas */
     border-left: 1px solid var(--light-lines);  /* Agrega un borde izquierdo a las celdas */
+    color: var(--text-dark-color);
+    font-size: 14px;
 }
 
 .action-button {
@@ -48,4 +52,5 @@
 .actions{
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
