--- a/src/components/Pagination/pagination.css
+++ b/src/components/Pagination/pagination.css
@@ -1,3 +1,5 @@
+@import '../variables.css';
+
 .pagination-container {
     display: flex;
     justify-content: center;
@@ -32,8 +34,8 @@
   }
   
   .pagination button.active {
-    background-color: #3f51b5;
-    border-color: #3f51b5;
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
     color: white;
   }
   
