--- a/src/components/SpecialTable/specialtable.css
+++ b/src/components/SpecialTable/specialtable.css
@@ -6,10 +6,15 @@ table {
   th,
   td {
     padding: 8px;
-    text-align: left;
+    text-align: center;
     border-bottom: 1px solid #ddd;
     border-left: 1px solid #ddd;
   }
+
+.bold-style{
+    font-weight: bold;
+}
+
   
 
 
