--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -7,7 +7,8 @@
     background-color: var(--primary-color);
     height: 95vh;
     padding: 40px 20px 0px 20px;
-    min-width: 240px;
+    min-width: 260px;
+    max-width: 300px;
     font-family: var(--font-primary);
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Sombra */
