--- a/src/components/DeviceInfo/DeviceInfo.css
+++ b/src/components/DeviceInfo/DeviceInfo.css
@@ -1,9 +1,11 @@
+@import '../variables.css';
+
 .device-info-container {
     display: grid;
     grid-template-rows: repeat(2, auto);
     grid-template-columns: 1fr;
     grid-gap: 0;
-    max-height: 600px;
+    max-height: 400px;
     overflow-y: auto;
     width: 100%;
   }
@@ -25,6 +27,18 @@
     border-collapse: collapse;
     width: 100%;
   }
+
+.toolbar{
+  background-color: var(--primary-color);
+  border-radius: 20px;
+  margin-bottom: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Sombra */
+  display: flex;
+}
+
+.support-form{
+  
+}
 
 
   
