--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -12,6 +12,7 @@
     font-family: var(--font-primary);
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Sombra */
+    height: 100%;
 }
 
 .title-text{
