--- a/src/components/SpecialTable/specialtable.css
+++ b/src/components/SpecialTable/specialtable.css
@@ -5,19 +5,23 @@ table {
   
   th,
   td {
-    padding: 8px;
+    padding: 8px 0px 8px 0px;
     text-align: center;
     border-bottom: 1px solid #ddd;
     border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-top: 1px solid #ddd;
     width: calc(100% / var(--num-columns));
   }
 
 .bold-style{
     font-weight: bold;
+    background-color: rgba(253, 255, 248, 0.5);
 }
 
 .title-table{
   max-width: 30px;
+  background-color: rgba(253, 255, 248, 0.5);
 }
 
 .tr-table{
