--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -1,12 +1,12 @@
 .main-view {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  height: 100%;
+  height: 100vh;
 }
   
 .content {
   display: grid;
-  grid-template-rows: 1fr 5fr;
+  grid-template-rows: 1fr 7fr;
   height: 100%;
   padding: 0px 20px 0px 20px;
 }
