--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -30,6 +30,7 @@ thead th {
     border-left: 1px solid var(--light-lines);  /* Agrega un borde izquierdo a las celdas */
     color: var(--text-dark-color);
     font-size: 14px;
+    max-width: 150px;
 }
 
 .td {
@@ -40,6 +41,7 @@ thead th {
     border-left: 1px solid var(--light-lines);  /* Agrega un borde izquierdo a las celdas */
     color: var(--text-dark-color);
     font-size: 14px;
+    max-width: 150px;
 }
 
 .action-button {
