--- a/src/components/AddReservation/AddReservation.css
+++ b/src/components/AddReservation/AddReservation.css
@@ -32,7 +32,7 @@ width: 100%;
 height: 6rem;
 }
 
-button[type="submit"] {
+.button[type="submit"] {
 background-color: #0077b6;
 color: #fff;
 font-size: 1rem;
@@ -42,7 +42,7 @@ border: none;
 cursor: pointer;
 }
 
-button[type="submit"]:hover {
+.button[type="submit"]:hover {
 background-color: #023e8a;
 }
 
@@ -72,7 +72,7 @@ width: 100%;
 height: 6rem;
 }
 
-button[type="submit"] {
+.button[type="submit"] {
 background-color: #0077b6;
 color: #fff;
 font-size: 1rem;
@@ -82,7 +82,7 @@ border: none;
 cursor: pointer;
 }
 
-button[type="submit"]:hover {
+.button[type="submit"]:hover {
 background-color: #023e8a;
 }
 
