--- a/src/components/AddPlace/AddPlace.css
+++ b/src/components/AddPlace/AddPlace.css
@@ -15,13 +15,14 @@
 
 .formulario-columnas label {
   margin-bottom: 0.5rem;
+  font-size: 0.8rem; /* Tamaño de letra más pequeño */
 }
 
 .formulario-columnas input,
 .formulario-columnas select,
 .formulario-columnas textarea {
   padding: 0.5rem;
-  font-size: 1rem;
+  font-size: 0.9rem; /* Tamaño de letra más pequeño */
   border-radius: 4px;
   border: 1px solid #ccc;
   background-color: #fff;
@@ -35,7 +36,7 @@
 .button[type="submit"] {
   background-color: #0077b6;
   color: #fff;
-  font-size: 1rem;
+  font-size: 0.9rem; /* Tamaño de letra más pequeño */
   padding: 0.5rem 1rem;
   border-radius: 4px;
   border: none;
@@ -50,4 +51,5 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
+  align-items: flex-start; /* Alineación a la misma altura */
 }
